# almost-full

./: .travis.yml  LICENSE  README.md  _CoqProject  constructive-fixpoints.aux  constructive-fixpoints.bbl  constructive-fixpoints.blg  constructive-fixpoints.tex  constructive-fixpoints.tex~  coq-almost-full.opam  default.nix  dune-project  listingstuff.tex  listingstuff.tex~  local.bib  meta.yml
.github/workflows/: coq-ci.yml  docker-action.yml  nix-action.yml
code/: AFConstructions.v  AFExamples.v  AlmostFull.v  AlmostFullInduction.v  Makefile  README
code/prop-bounded/: AFConstructions.glob  AFConstructions.v  AFConstructions.vo  AFConstructions.v~  AFExamples.glob  AFExamples.vo  AlmostFull.glob  AlmostFull.v  AlmostFull.vo  AlmostFull.v~  AlmostFullGeneralized.glob  AlmostFullGeneralized.v  AlmostFullGeneralized.vo  AlmostFullGeneralized.v~  AlmostFullInduction.glob  AlmostFullInduction.v  AlmostFullInduction.vo  Makefile  Makefile~  Terminator.glob  Terminator.v  Terminator.vo  Terminator.v~
src/: AlmostFullHaskell.hs
theories/: dune
theories/Default/: AFConstructions.v  AFExamples.v  AlmostFull.v  AlmostFullInduction.v  Terminator.v
theories/PropBounded/: AFConstructions.v  AFExamples.v  AlmostFull.v  AlmostFullGeneralized.v  AlmostFullInduction.v  Terminator.v
