opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/almost-full"
dev-repo: "git+https://github.com/palmskog/almost-full.git"
bug-reports: "https://github.com/palmskog/almost-full/issues"
license: "MIT"

synopsis: "Almost-full relations in Coq for proving termination"
description: """
Coq development of almost-full relations, including the Ramsey
Theorem, useful for proving termination."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.11" & < "8.13~") | (= "dev")}
]

tags: [
  "category:Computer Science/Data Types and Data Structures"
  "keyword:Ramsey theorem"
  "keyword:termination"
  "logpath:AlmostFull"
]
authors: [
  "Dimitrios Vytiniotis"
  "Thierry Coquand"
  "David Wahlstedt"
]
